BASE element: Fix relative href handling in about:blank documents.

According to the specification, relative URL of base[href] should be resolved
with document's fallback base URL, not document's URL().

Bug: 739504
Change-Id: I811e8b14d7130873a4ffa6d45a094407f9e8a098